--- a/conference/NetConf2019/xdp-metadata-discussion.org
+++ b/conference/NetConf2019/xdp-metadata-discussion.org
@@ -1,5 +1,5 @@
 # -*- fill-column: 79; -*-
-#+TITLE: XDP metadata discussion for hardware-offloads
+#+TITLE: SKB creation outside drivers: using metadata and HW-offloads?
 #+AUTHOR: Jesper Dangaard Brouer and Toke Høiland-Jørgensen
 #+EMAIL: brouer@redhat.com
 #+REVEAL_THEME: redhat
@@ -56,8 +56,8 @@ then it's possible to run the decktape.js file direct from the git-repo via the
 #+begin_src bash
 $ node ~/git/decktape/decktape.js \
     -s 1600x900 -p 100 --chrome-arg=--no-sandbox \
-     xdp_building_block.html \
-     xdp_building_block.pdf
+     xdp-metadata-discussion.html \
+     xdp-metadata-discussion.pdf
 #+end_src
 
 The size is set to get slide text to fit on the page. And -p 100 makes it go
@@ -73,6 +73,14 @@ Colors are choosen via org-mode italic/bold high-lighting:
  - /italic/ = /green/
  - *bold*   = *yellow*
  - */italic-bold/* = red
+
+* Better title?
+
+The title and angle might need to change to talk?
+
+Title suggestions:
+- XDP metadata discussion for hardware-offloads
+- SKB creation outside drivers: using metadata and HW-offloads?
 
 * Slide: Background: What is XDP-metadata area?                      :export:
 
