NetConf2019: commit feature slides before bed time
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetConf2019/xdp-feature-detection.org
+++ b/conference/NetConf2019/xdp-feature-detection.org
@@ -107,12 +107,16 @@ Should likely use net_device NDO (Network Device Operation) call =ndo_bpf=
 - for query supported XDP features
 - (Think this was requested by Daniel Borkman)
 
-* Slide: External API
+* Slide: External API                                                :export:
 
 Add a userspace API to query features
 - Netlink?
 - Ethtool?
 
+* Slide: One option left: BPF-load time ifindex binding              :export:
+
+TODO: Expand on using HW-offload ifindex load-time binding
+- Can this cover all the cases?
 
 * Emacs tricks
 
